--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,13 +50,37 @@
       <section>
           <h2>Чем мы занимаемся</h2>
           <ul>
-              <li><img</li>
+             <li><img src="./images/box1.jpg" alt="набор текста на планшете" width="370">
+             </li>
+             <li><img src="./images/box2.jpg" alt="структура сайта на экране" width="370">
+             </li>
+             <li><img src="./images/box3.jpg" alt="палитра на экране планшета" width="370">
+             </li>
           </ul>
-
       </section>
-
-
-
-  </main>   
+      <section>
+          <h2>Наша команда</h2>
+          <ul>
+              <li><a href=""><img src="./images/photo1.jpg" alt="фото члена команды" width="270">
+                     <h3>Игорь Демьяненко</h3>
+                     <p>Product Designe</p>
+                    </a> 
+              </li>
+              <li><a href=""><img src="./images/photo2.jpg" alt="фото члена команды" width="270"> <h3>Ольга Репина</h3>
+                     <p>Frontend Developer</p>
+                   </a>
+               </li>
+              <li><a href=""><img src="./images/photo3.jpg" alt="фото члена команды" width="270"> <h3>Николай Тарасов</h3>
+                     <p>Marketing</p>
+                   </a>
+              </li>
+              <li><a href=""><img src="./images/photo4.jpg" alt="фото члена команды" width="270"> <h3>Михаил Ермаков</h3>
+                     <p>UI Designer</p>
+                   </a>
+              </li>
+          </ul>
+      </section>
+  </main>
+  <footer></footer>   
 </body>
 </html>
