исправляет ошибки по валидатору

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ens">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio/title>
-</head>
-<body>
+<html lang="ru">
+  <head>
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>WebStudio</title>
+  </head>
+ <body>
     <header>
       <a href="/">WebStudio</a>
       <nav>
@@ -96,5 +96,5 @@
          </address>
       </section>
   </footer>   
-</body>
+ </body>
 </html>
