--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
       </ul>
     </header>
   <main>
-      <div>
-          <section>
-              <h1>Эффективные решения для вашего бизнеса</h1>
-              <button type="button">Заказать услугу</button>
-          </section>
-      </div>
+      <section>
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
+      </section>
       <section>
           <h2>Наши преимущества</h2>
           <ul>
@@ -63,38 +61,31 @@
       <section>
           <h2>Наша команда</h2>
           <ul>
-              <li><a href=""><img src="./images/photo1.jpg" alt="фото члена команды" width="270">
+              <li><img src="./images/photo1.jpg" alt="фото члена команды" width="270">
                      <h3>Игорь Демьяненко</h3>
                      <p>Product Designe</p>
-                    </a> 
               </li>
-              <li><a href=""><img src="./images/photo2.jpg" alt="фото члена команды" width="270"> <h3>Ольга Репина</h3>
+              <li><img src="./images/photo2.jpg" alt="фото члена команды" width="270"> <h3>Ольга Репина</h3>
                      <p>Frontend Developer</p>
-                   </a>
                </li>
-              <li><a href=""><img src="./images/photo3.jpg" alt="фото члена команды" width="270"> <h3>Николай Тарасов</h3>
+              <li><img src="./images/photo3.jpg" alt="фото члена команды" width="270"> <h3>Николай Тарасов</h3>
                      <p>Marketing</p>
-                   </a>
               </li>
-              <li><a href=""><img src="./images/photo4.jpg" alt="фото члена команды" width="270"> <h3>Михаил Ермаков</h3>
+              <li><img src="./images/photo4.jpg" alt="фото члена команды" width="270"> <h3>Михаил Ермаков</h3>
                      <p>UI Designer</p>
-                   </a>
               </li>
           </ul>
       </section>
   </main>
   <footer>
-     <section>
-         <h2>Контактная информация</h2>
-         <a href="/">WebStudio</a>
-         <address> 
-              <ul>
-                 <li>г. Киев, пр-т Леси Украинки, 26</li>
-                 <li>info@example.com</li>
-                 <li>+38 099 111 11 11</li>
-              </ul>
-         </address>
-      </section>
+      <a href="/">WebStudio</a>
+      <address> 
+        <ul>
+          <li><a href="http://maps.google.com">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href=""> hinfo@example.com</a></li>
+          <li><a href="">+38 099 111 11 11</a></li>
+        </ul>
+      </address>  
   </footer>   
  </body>
 </html>
