--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>WebStudio</title>
+     <title>Студия</title>
   </head>
  <body>
     <header>
-      <a href="/">WebStudio</a>
+      <a href="/">Web<span>Studio</span></a>
       <nav>
          <ul>
             <li><a href="">Студия</a></li>
@@ -27,7 +27,7 @@
           <button type="button">Заказать услугу</button>
       </section>
       <section>
-          <h2>Наши преимущества</h2>
+          <h2 hidden>Наши преимущества</h2>
           <ul>
               <li>
                   <h3>Внимание к деталям</h3>
@@ -78,10 +78,10 @@
       </section>
   </main>
   <footer>
-      <a href="/">WebStudio</a>
+      <a href="/">Web<span>Studio</span></a>
       <address> 
         <ul>
-          <li><a href="http://maps.google.com">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="https://goo.gl/maps/M4pxGZBaboN6nZQU7" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li><a href=""> hinfo@example.com</a></li>
           <li><a href="">+38 099 111 11 11</a></li>
         </ul>
